<resources>
    <string name="app_name">InventoryV1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="success">insert pet success</string>
    <string name="failed">inset pet failed</string>
    <string name="empty_view_text">Get started by adding a book :)</string>
    <string name="action_delete_all_books">Delete All Products</string>
    <string name="delete_all_dialog_msg">Delete All these Products ?</string>
    <string name="add_book">Add New Product</string>
    <string name="book_editor">Product Editor</string>
    <string name="edit_book">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="book_view">Product view Details</string>
    <string name="delete_dialog_msg">Delete this Product?</string>
    <string name="quantity_change_msg">Quantity was change</string>
    <string name="quantity_finish_msg">Buy another book.</string>
    <string name="book_name">Product Name</string>
    <string name="book_price">Price</string>
    <string name="book_price_currency">T.L.</string>
    <string name="book_quantity">Quantity</string>
    <string name="book_supplier_name">Supplier Name</string>
    <string name="book_supplier_phone_number">Supplier Phone Number</string>
    <string name="action_save">Save</string>
    <string name="empty_list">Save</string>
    <string name="insert_failed">Error with saving book</string>
    <string name="insert_successful">Product saved successfully</string>
    <string name="update_failed">Error with updating book</string>
    <string name="update_successful">Product updated successfully</string>
    <string name="deleted_all_books_message">rows deleted from book table</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_book_successful">Product deleted</string>
    <string name="delete_book_failed">Error with deleting Product</string>
    <string name="book_name_requires">Product name requires</string>
    <string name="filed_requires">please fill all filed form to insert an new book</string>
    <string name="price_requires">Product price requires</string>
    <string name="quantity_requires">Product quantity requires</string>
    <string name="supplier_name_requires">Supplier Name requires select anything without unknown selection</string>
    <string name="supplier_phone_requires">Supplier Phone requires</string>
</resources>
