<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/book_editor"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:text="@string/book_name" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/book_name_edit_text"
                style="@style/ProductAddFormStyle"
                android:hint="@string/book_name"
                android:inputType="textCapWords" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingTop="6dp"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:text="@string/book_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/book_price_edit_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAppearance="android:textAppearanceSmall"
            android:hint="@string/book_price"
            android:inputType="number" />

            <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/book_price_currency" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"/>
        <TextView
              android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
           android:paddingTop="16dp"
           android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:text="@string/book_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/book_name_supplier"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/book_price"
                android:inputType="number" />

            <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
                android:text="@string/book_supplier_name" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="watch_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
         android:text="@string/book_quantity" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/book_quantity_edit_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/book_quantity"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:text="@string/book_supplier_name" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:text="@string/book_supplier_phone_number" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/book_supplier_phone_number_edit_text"
                style="@style/ProductAddFormStyle"
                android:hint="@string/book_supplier_phone_number"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>